# Analista_Sistemico-Estrategico

./: Cargo.toml  Dockerfile  README.md
src/: i18n.rs  main.rs  multipart.rs  openai.rs  prompts.rs  sanitize.rs
src/handlers/: analyze.rs  index.rs  motors.rs
templates/: index.html  landing.html  report.html
