[package]
name = "analista_sistemico"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
futures = "0.3"
uuid = { version = "1.4", features = ["v4"] }
dotext = "0.1"
pdf-extract = "0.7"

# --- CORRECCIONES DE EMERGENCIA (NO BORRAR) ---
# Estas librerías se han actualizado a una versión que rompe Rust estable.
# Las forzamos a versiones anteriores que funcionan bien.
ignore = "=0.4.22"
globset = "=0.4.15"