[package]
name = "analista_sistemico"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
futures = "0.3"
uuid = { version = "1.4", features = ["v4"] }
dotext = "0.1"
pdf-extract = "0.7"

# --- CORRECCIONES DE ESTABILIDAD ---

# 1. Tera: La v1.20.1 pide Rust 1.85. Forzamos la v1.19.1 que es estable.
tera = "=1.19.1"

# 2. Dependencias rotas por "edition2024":
ignore = "=0.4.22"
globset = "=0.4.15"