[package]
name = "analista_sistemico"
version = "0.2.2"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1" # <--- Esta es la librería que faltaba
tera = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
ammonia = "4"
pdf-extract = "0.7"
dotext = "0.1"
